opam-version: "2.0"
name: "ff-sig"
version: "0.4.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Minimal finite field signature"
description: "Minimal finite field signature"
homepage: "https://gitlab.com/dannywillems/ocaml-ff"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ff.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ff/issues"
license: "MIT"
depends: [
  "dune" {>= "2.0"}
  # Has not been tested with other Zarith versions.
  # The CI should verify it and it can then be extent
  "zarith" {>= "1.9.1" & < "2.0"}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
