opam-version: "2.0"
name: "ocaml-ff"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "OCaml implementation of Finite Field operations"
homepage: "https://gitlab.com/dannywillems/ocaml-ff"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-ff.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ff/issues"
license: "MIT"
depends: [
  "dune" {build & >= "1.7" & < "2.0.0" }
  "zarith" {build & = "1.9.1"}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
