opam-version: "2.0"
name: "test-ff-make"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Test factory for finite fields"
homepage: "https://gitlab.com/dannywillems/ocaml-ff"
dev-repo: "git+https://gitlab.com/dannywillems/ocmal-ff.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-ff/issues"
license: "MIT"
depends: [
  "dune" {build & >= "1.7" & < "2.0.0" }
  "ff" {build}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
